# gdsl-toolkit

./: .clang-format  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile_arm  Makefile_arm7  Makefile_avr  Makefile_manual  Makefile_mips  Makefile_mlton  Makefile_sml  Makefile_x86  README  README.md  Readme.md  avr.mk  bugs.udcli  build-dis.sh  build.bat  c++_eclipse_formatting.xml  cli.c  config.mk  configure.ac  gdsl-todo  gdsl.h  gdsl.mlb  gdslConfig.cmake.in  gdslConfigVersion.cmake.in  gdslc.mlb  java_eclipse_formatting.xml  mips.mk  mltk.cm  mltk.mlb  pretty.js  pygdsl.i  (+11 more)
libs/: CMakeLists.txt  Makefile
libs/cgdsl/: .gitignore  Makefile
libs/cgdsl/include/rreil/: gdrr_builder.h  rreil_arity.h  rreil_exception.h  rreil_id.h  rreil_linear.h  rreil_sexpr.h  rreil_statement.h  rreil_variable.h  rreil_variable_limited.h
libs/cgdsl/src/rreil/: alloc.c  copy.c  free.c  gdrr_builder.c  print.c  rreil_id.c
libs/cppgdsl/: .gitignore  CMakeLists.txt  Makefile
libs/cppgdsl/include/cppgdsl/: asm_builder.h  block.h  compare.h  gdsl.h  gdsl_exception.h  instruction.h  iterator.h  optimization.h  preservation.h  rreil_builder.h
libs/cppgdsl/src/: asm_builder.cpp  block.cpp  gdsl.cpp  gdsl_exception.cpp  instruction.cpp  rreil_builder.cpp
libs/cppgdsl/src/arch/: x86.cpp
libs/cppgdsl/src/assembly/: instruction.cpp
libs/cppgdsl/src/frontend/: bare_frontend.cpp  frontend.cpp
libs/cppgdsl/src/rreil/: address.cpp  branch_hint.cpp  copy_visitor.cpp  flop.cpp  instruction.cpp  variable.cpp  variable_limited.cpp  visitor.cpp
libs/cppgdsl_legacy/include/cppgdsl/: optimization.h  rreil_builder.h
libs/cppgdsl_legacy/src/: gdsl.cpp  gdsl_exception.cpp  rreil_builder.cpp
libs/cppgdsl_legacy/src/rreil/: copy_visitor.cpp  variable.cpp
libs/dgdsl/: .gitignore  Makefile  dub.json
libs/dgdsl/source/gdsl/: frontend.d  gdsl.d  generated.d  ireferable.d  multiplex.d  reference_manager.d
libs/gdrr/: Makefile
libs/gdrr/include/: gdrr_arch_callbacks.h  gdrr_callbacks.h  gdrr_config.h  gdrr_types.h  gdrr_x86_callbacks.h
libs/gdrr/src/: gdrr.c  x86.c
libs/gdsl/: Makefile
libs/gdsl-multiplex/: CMakeLists.txt  Makefile
libs/gdsl-multiplex-windows/: .gitignore  Makefile
libs/gdsl-multiplex-windows/src/: gdsl_multiplex.c
libs/gdsl-multiplex/include/: gdsl_generic.h  gdsl_multiplex.h
libs/gdsl-multiplex/src/: gdsl_multiplex.c
libs/gdsl/include/: gdsl.h
libs/gdslrt/: Makefile
libs/gdslrt/include/: gdslrt.h
libs/gdslrt/src/: gdslrt.c
libs/gdutil/: CMakeLists.txt  Makefile
libs/gdutil/include/: decoder_config.h  gdsl_elf.h  stack.h  util.h
libs/gdutil/src/: decoder_config.c  gdsl_elf.c  stack.c  util.c
libs/gdwrap/: Makefile
libs/gdwrap/include/: gdwrap.h
libs/gdwrap/src/: gdwrap.c
libs/jgdrr/: Makefile  run.sh
libs/jgdrr/src/: rnati_NativeInterface.c
libs/jgdrr/src/rnati/: NativeInterface.java  RReilTranslateException.java
libs/jgdrr/src/rreil/: DefaultRReilCollection.java
libs/jgdsl/: .gitignore  CMakeLists.txt  Makefile  run.sh
libs/jgdsl/src/: GdslTest.java  Program.java  gdsl_BareFrontend.c  gdsl_BareFrontend.h  gdsl_Frontend.c  gdsl_Frontend.h  gdsl_Gdsl.c  gdsl_Gdsl.h  gdsl_ListFrontend.c  gdsl_ListFrontend.h  gdsl_NativeInterface.c  gdsl_NativeInterface.h  gdsl_asm_GeneralizerBackend.c  gdsl_asm_GeneralizerBackend.h  gdsl_decoder_Instruction.c  gdsl_decoder_Instruction.h  gdsl_decoder_NativeInstruction.c  gdsl_decoder_NativeInstruction.h  gdsl_rreil_BuilderBackend.c  gdsl_rreil_BuilderBackend.h  util.c  util.h
libs/jgdsl/src/blockwise/: BlockwiseTransformer.java
libs/jgdsl/src/gdsl/: BareFrontend.java  Decoder.java  Frontend.java  Gdsl.java  GdslDecodeException.java  GdslException.java  HeapExpiredException.java  HeapLock.java  HeapUseIndicator.java  IFrontendConfig.java  IReferable.java  Instruction.java  ListFrontend.java  NativeInterface.java  RReilTranslateException.java  ReferenceManager.java  ResourceUnavailableException.java
libs/jrreil/: Makefile  run.sh
libs/jrreil/src/: Program.java  rnati_NativeInterface.c  rnati_NativeInterface.h
libs/jrreil/src/rreil/: Address.java  (+11 more)
libs/memstream/: CMakeLists.txt
libs/memstream/include/: memstream.h
libs/memstream/src/: memstream.c
libs/readhex/: CMakeLists.txt  Makefile
libs/readhex/include/: readhex.h
libs/readhex/src/: readhex.c
libs/rreil/: .gitignore  Makefile
libs/rreil-sim/: Makefile
libs/rreil-sim/include/: context.h
libs/rreil-sim/src/: context.c  memory.c
libs/rreil/include/: context.h  memory.h
libs/rreil/src/: context.c  memory.c
libs/rustgdsl/: test.rs
libs/rustgdsl/rreil/: id.rs  mod.rs
libs/util/: Makefile
libs/util/include/: util.h
libs/util/src/: util.c
libs/x86/: Makefile
libs/x86-generator/: Makefile
libs/x86-generator/include/: generator.h
libs/x86-generator/src/: generator.c  x86_opcodes.c
libs/x86-tester/: Makefile
libs/x86-tester/include/: executor.h  tbgen.h  tester.h
libs/x86-tester/src/: executor.c  tbgen.c  tbgen_alloc.c  tester.c
libs/x86/include/: x86.h  x86_features.h
libs/x86/src/: x86.c  x86_features.c
tools/: CMakeLists.txt  Makefile  cgdsl-demo.c  cli-gdrr.c  cli.c  cppgdsl-demo.cpp  decoder-cli.c  dectran-cli-generic  dectran-cli-generic.c  liveness-sweep.c  mipseval-cli.c  optimization-sweep.c  semantics-cif-cli.c  semantics-cli-dynamic.c  semantics-cli.c  semantics-opt.c  sweep.c
tools/mipseval/: Makefile  mipseval-cli.c
tools/tardet/: Makefile
tools/tardet/examples/: Makefile  example_a.c  example_b.c  example_c.c  example_d.c  example_e.c  example_g.c  example_h.c  example_i.c  example_j.c
tools/tardet/src/: analyzer.cpp  analyzer.h  igdrr.c  igdrr.h  interval.cpp  interval.h  itree.cpp  itree.h  main.cpp  util.cpp  util.hpp
tools/x86-test-runner/: Makefile
tools/x86-test-runner/src/: main.c
tools/x86-test-runner/test_cases/: delayed_fsubst_test_cases
tools/x86-test-stats-runner/: Makefile
tools/x86-test-stats-runner/src/: hash_array.c  hash_array.h  main.c
tools/xed-cmp/: Makefile  run.sh
tools/xed-cmp/src/: xed-cmp.c
(+1302 files in other folders)
